lexer/tests/snapshots/basic__tests__edge_cases-10.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"123abc!@#\")"
---
Ok(
    [
        Numeric(
            [
                1,
                2,
                3,
            ],
        ),
        Litteral(
            "abc",
        ),
        Bang,
        Litteral(
            "@#",
        ),
    ],
)
