lexer/tests/snapshots/basic__tests__edge_cases-11.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"[(])\")"
---
Ok(
    [
        OpenBracket,
        OpenParenthesis,
        CloseBracket,
        CloseParenthesis,
    ],
)
