lexer/tests/snapshots/basic__tests__edge_cases-12.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"[{]}\")"
---
Ok(
    [
        OpenBracket,
        OpenBrace,
        CloseBracket,
        CloseBrace,
    ],
)
