lexer/tests/snapshots/basic__tests__edge_cases-13.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"\\\"Hello\\\\nWorld\\\"\")"
---
Ok(
    [
        DoubleQuote,
        Litteral(
            "Hello\\nWorld",
        ),
        DoubleQuote,
    ],
)
