lexer/tests/snapshots/basic__tests__edge_cases-14.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"00123\")"
---
Ok(
    [
        Numeric(
            [
                0,
                0,
                1,
                2,
                3,
            ],
        ),
    ],
)
