lexer/tests/snapshots/basic__tests__edge_cases-15.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"0001\")"
---
Ok(
    [
        Numeric(
            [
                0,
                0,
                0,
                1,
            ],
        ),
    ],
)
