lexer/tests/snapshots/basic__tests__edge_cases-16.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"Hello\\x00World\")"
---
Ok(
    [
        Litteral(
            "Hello\0World",
        ),
    ],
)
