lexer/tests/snapshots/basic__tests__edge_cases-2.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"   \")"
---
Ok(
    [
        Space,
        Space,
        Space,
    ],
)
