lexer/tests/snapshots/basic__tests__edge_cases-3.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"\\t\\t\\t\")"
---
Ok(
    [
        Litteral(
            "\t\t\t",
        ),
    ],
)
