lexer/tests/snapshots/basic__tests__edge_cases-4.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"\\n\\n\\n\")"
---
Ok(
    [
        NewLine,
        NewLine,
        NewLine,
    ],
)
