lexer/tests/snapshots/basic__tests__edge_cases-5.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"@#$%^&*()\")"
---
Ok(
    [
        Litteral(
            "@#$%^&",
        ),
        Multiply,
        OpenParenthesis,
        CloseParenthesis,
    ],
)
